began javascript functions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -26,13 +26,103 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead">Enter current date and time</p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">8AM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">9AM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">10AM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">11AM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">12PM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">1PM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">2PM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">3PM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">4PM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">5PM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span id="timeOfDay" class="input-group-text">6PM</span>
+        </div>
+        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="btn btn-success">Save</button>
+      </div>
+
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
