Started trying to get textarea to display correct color

--- a/index.html
+++ b/index.html
@@ -30,92 +30,92 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="input-group">
+      <div class="row input-group" id="8">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">8AM</span>
+          <span  class="hour input-group-text">8AM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea  class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="9">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">9AM</span>
+          <span  class="hour input-group-text">9AM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="10">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">10AM</span>
+          <span  class="hour input-group-text">10AM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="11">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">11AM</span>
+          <span  class="hour input-group-text">11AM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="12">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">12PM</span>
+          <span  class="hour input-group-text">12PM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="13">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">1PM</span>
+          <span  class="hour input-group-text">1PM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="14">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">2PM</span>
+          <span  class="hour input-group-text">2PM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="15">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">3PM</span>
+          <span  class="hour input-group-text">3PM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="16">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">4PM</span>
+          <span  class="hour input-group-text">4PM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="17">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">5PM</span>
+          <span  class="hour input-group-text">5PM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
-      <div class="input-group">
+      <div class="row input-group" id="18">
         <div class="input-group-prepend">
-          <span id="timeOfDay" class="input-group-text">6PM</span>
+          <span  class="hour input-group-text">6PM</span>
         </div>
-        <textarea id="textArea" class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="btn btn-success">Save</button>
+        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn">Save</button>
       </div>
 
 
