got all of the javascript working

--- a/index.html
+++ b/index.html
@@ -26,96 +26,96 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead">Enter current date and time</p>
+      <p id="currentDate" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row input-group" id="8">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">8AM</span>
+      <div class="row input-group" >
+        <div class="col-md-1 hour col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">8AM</span>
         </div>
-        <textarea  class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="8" class="col-md-10 col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1 col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="9">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">9AM</span>
+      <div class="row input-group" >
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">9AM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="9" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="10">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">10AM</span>
+      <div class="row input-group" >
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">10AM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="10" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="11">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">11AM</span>
+      <div class="row input-group">
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">11AM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="11" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="12">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">12PM</span>
+      <div class="row input-group" >
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">12PM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="12" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="13">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">1PM</span>
+      <div class="row input-group">
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">1PM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="13" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="14">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">2PM</span>
+      <div class="row input-group" >
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">2PM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="14" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="15">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">3PM</span>
+      <div class="row input-group">
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">3PM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="15" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="16">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">4PM</span>
+      <div class="row input-group" >
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">4PM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="16" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="17">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">5PM</span>
+      <div class="row input-group">
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">5PM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="17" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
-      <div class="row input-group" id="18">
-        <div class="input-group-prepend">
-          <span  class="hour input-group-text">6PM</span>
+      <div class="row input-group">
+        <div class="col-md-1 hour input-group-prepend">
+          <span  class="input-group-text">6PM</span>
         </div>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
-        <button type="button" class="saveBtn">Save</button>
+        <textarea id="18" class="col-md-10 form-control" aria-label="With textarea"></textarea>
+        <button type="button" class="saveBtn col-md-1">Save</button>
       </div>
 
 
